syntax = "proto3";

package bdb.v0;

service DatabaseServer {
    rpc Ping(PingRequest) returns (PingResponse);
}

message PingRequest {
    string name = 1;
}

message PingResponse {
    string message = 1;
}

